Updated all languages, Chinese is now fully translated, open in context menu, updated logo

--- a/CustomRPC/About.it.resx
+++ b/CustomRPC/About.it.resx
@@ -124,6 +124,6 @@
     <value>Chiudi</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Informazioni su…</value>
+    <value>Informazioni su</value>
   </data>
 </root>
