--- a/CustomRPC/About.lt.resx
+++ b/CustomRPC/About.lt.resx
@@ -131,6 +131,6 @@
     <value>Uždaryti</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Apie…</value>
+    <value>Apie</value>
   </data>
 </root>
