--- a/CustomRPC/About.nl.resx
+++ b/CustomRPC/About.nl.resx
@@ -131,6 +131,6 @@
     <value>Sluiten</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Over…</value>
+    <value>Over</value>
   </data>
 </root>
