--- a/CustomRPC/About.pl.resx
+++ b/CustomRPC/About.pl.resx
@@ -131,6 +131,6 @@
     <value>Zamknij</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>O programie…</value>
+    <value>O programie</value>
   </data>
 </root>
