--- a/CustomRPC/About.fr.resx
+++ b/CustomRPC/About.fr.resx
@@ -124,6 +124,6 @@
     <value>Fermer</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>À propos…</value>
+    <value>À propos</value>
   </data>
 </root>
