--- a/CustomRPC/About.pt-BR.resx
+++ b/CustomRPC/About.pt-BR.resx
@@ -124,6 +124,6 @@
     <value>Fechar</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Sobre…</value>
+    <value>Sobre</value>
   </data>
 </root>
