--- a/CustomRPC/About.ru.resx
+++ b/CustomRPC/About.ru.resx
@@ -131,6 +131,6 @@
     <value>Закрыть</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>О программе…</value>
+    <value>О программе</value>
   </data>
 </root>
