--- a/CustomRPC/About.vi.resx
+++ b/CustomRPC/About.vi.resx
@@ -131,6 +131,6 @@
     <value>Đóng</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Thông tin…</value>
+    <value>Thông tin</value>
   </data>
 </root>
