--- a/CustomRPC/MainForm.zh-Hans.resx
+++ b/CustomRPC/MainForm.zh-Hans.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="trayIcon.BalloonTipText" xml:space="preserve">
-    <value>双击图标再次显示，右键单击退出</value>
+    <value>双击图标再次显示，右键单击退出。</value>
   </data>
   <data name="trayIcon.BalloonTipTitle" xml:space="preserve">
-    <value>此程序会在托盘上运行</value>
+    <value>此程序会在托盘上运行。</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="trayMenuReconnect.Size" type="System.Drawing.Size, System.Drawing">
@@ -278,7 +278,7 @@
     <value>180, 22</value>
   </data>
   <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
-    <value>关于</value>
+    <value>关于...</value>
   </data>
   <data name="helpToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>43, 20</value>
@@ -296,7 +296,7 @@
     <value>更新状态</value>
   </data>
   <data name="buttonUpdatePresence.ToolTip" xml:space="preserve">
-    <value>更新状态</value>
+    <value>更新状态。</value>
   </data>
   <data name="buttonConnect.Text" xml:space="preserve">
     <value>链接</value>
@@ -311,16 +311,16 @@
     <value>断开应用与Discord的链接，这可能需要一段时间。</value>
   </data>
   <data name="labelID.ToolTip" xml:space="preserve">
-    <value>Discord Developers网站获取的应用ID</value>
+    <value>Discord Developers网站获取的应用ID。</value>
   </data>
   <data name="labelDetails.ToolTip" xml:space="preserve">
-    <value>状态的第一行</value>
+    <value>状态的第一行。</value>
   </data>
   <data name="labelState.ToolTip" xml:space="preserve">
-    <value>状态的第二行</value>
+    <value>状态的第二行。</value>
   </data>
   <data name="labelSmallKey.ToolTip" xml:space="preserve">
-    <value>小图片资源</value>
+    <value>小图片资源。</value>
   </data>
   <data name="labelSmallText.ToolTip" xml:space="preserve">
     <value>当鼠标悬停在小照片上时显示的文字。</value>
@@ -329,7 +329,7 @@
     <value>当鼠标悬停在大照片上时显示的文字。</value>
   </data>
   <data name="labelLargeKey.ToolTip" xml:space="preserve">
-    <value>大图片资源</value>
+    <value>大图片资源。</value>
   </data>
   <data name="labelSmall.Size" type="System.Drawing.Size, System.Drawing">
     <value>43, 14</value>
@@ -338,7 +338,7 @@
     <value>小图片</value>
   </data>
   <data name="labelSmall.ToolTip" xml:space="preserve">
-    <value>大图片右下角显示的图片</value>
+    <value>大图片右下角显示的图片。</value>
   </data>
   <data name="labelLarge.Size" type="System.Drawing.Size, System.Drawing">
     <value>43, 14</value>
@@ -347,7 +347,7 @@
     <value>大图片</value>
   </data>
   <data name="labelLarge.ToolTip" xml:space="preserve">
-    <value>上面设置的文字的左侧显示的图片</value>
+    <value>上面设置的文字的左侧显示的图片。</value>
   </data>
   <data name="radioButtonNone.Size" type="System.Drawing.Size, System.Drawing">
     <value>73, 18</value>
@@ -356,7 +356,7 @@
     <value>没有任何</value>
   </data>
   <data name="radioButtonNone.ToolTip" xml:space="preserve">
-    <value>不启用时间戳</value>
+    <value>不启用时间戳。</value>
   </data>
   <data name="radioButtonStartTime.Size" type="System.Drawing.Size, System.Drawing">
     <value>140, 18</value>
@@ -365,7 +365,7 @@
     <value>自CustomRP启动以来</value>
   </data>
   <data name="radioButtonStartTime.ToolTip" xml:space="preserve">
-    <value>显示自此应用启动以来的时间</value>
+    <value>显示自此应用启动以来的时间。</value>
   </data>
   <data name="radioButtonLocalTime.Size" type="System.Drawing.Size, System.Drawing">
     <value>97, 18</value>
@@ -374,7 +374,7 @@
     <value>您的当地时间</value>
   </data>
   <data name="radioButtonLocalTime.ToolTip" xml:space="preserve">
-    <value>用24小时格式显示您的当地时间</value>
+    <value>用24小时格式显示您的当地时间。</value>
   </data>
   <data name="labelTimestamp.ToolTip" xml:space="preserve">
     <value>设置状态的时间戳，该时间戳在上面的所有文本下显示。
@@ -398,5 +398,41 @@
   </data>
   <data name="labelButton1.Text" xml:space="preserve">
     <value>按钮1</value>
+  </data>
+  <data name="openToolStripMenuItem.Text" xml:space="preserve">
+    <value>打开</value>
+  </data>
+  <data name="labelButton1.ToolTip" xml:space="preserve">
+    <value>按钮一会出现在你个人状态的下方。</value>
+  </data>
+  <data name="labelButton2.Text" xml:space="preserve">
+    <value>按钮2</value>
+  </data>
+  <data name="labelButton2.ToolTip" xml:space="preserve">
+    <value>按钮二会出现在按钮一的下方，或在你个人状态的下方如没设定第一按钮。</value>
+  </data>
+  <data name="labelButton1URL.ToolTip" xml:space="preserve">
+    <value>用户点击按钮后将跳转到的URL。</value>
+  </data>
+  <data name="labelButton2URL.ToolTip" xml:space="preserve">
+    <value>用户点击按钮后将跳转到的URL。</value>
+  </data>
+  <data name="labelButton1Text.ToolTip" xml:space="preserve">
+    <value>按钮的标签一。</value>
+  </data>
+  <data name="labelButton2Text.ToolTip" xml:space="preserve">
+    <value>按钮的标签二。</value>
+  </data>
+  <data name="labelPartyOf.Text" xml:space="preserve">
+    <value>的</value>
+  </data>
+  <data name="defaultToolStripMenuItem.Text" xml:space="preserve">
+    <value>原本</value>
+  </data>
+  <data name="languageToolStripMenuItem.Text" xml:space="preserve">
+    <value>语言</value>
+  </data>
+  <data name="checkForUpdatesToolStripMenuItem.Text" xml:space="preserve">
+    <value>查看新更新...</value>
   </data>
 </root>
