--- a/CustomRPC/MainForm.zh-Hans.resx
+++ b/CustomRPC/MainForm.zh-Hans.resx
@@ -278,7 +278,7 @@
     <value>180, 22</value>
   </data>
   <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
-    <value>关于...</value>
+    <value>关于。。。</value>
   </data>
   <data name="helpToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>43, 20</value>
@@ -433,6 +433,6 @@
     <value>语言</value>
   </data>
   <data name="checkForUpdatesToolStripMenuItem.Text" xml:space="preserve">
-    <value>查看新更新...</value>
+    <value>查看新更新。。。</value>
   </data>
 </root>
